--- a/resources/assets/plugins/bootstrap-slider/slider.css
+++ b/resources/assets/plugins/bootstrap-slider/slider.css
@@ -122,7 +122,7 @@
     display: none;
 }
 .slider .tooltip.top {
-  margin-top: -36px;
+  margin-top: -50px;
 }
 .slider .tooltip-inner {
     white-space: nowrap;
@@ -188,12 +188,12 @@
     position: absolute;
     width: 20px;
     height: 20px;
-    background-color: #444;
+    background-color: #47B475;
     -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
     -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
     box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
     opacity: 1;
-    border: 0px solid transparent;
+    border: 0 solid transparent;
 }
 .slider-handle.round {
     -webkit-border-radius: 20px;
