--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -9599,4 +9599,7 @@ span.article-current-status {
   font-size: 20px;
   line-height: 2.3; }
 
+tr.periods {
+  cursor: pointer; }
+
 /*# sourceMappingURL=admin.css.map */
