--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -4790,9 +4790,21 @@ section + .portfolio-pullup {
   z-index: 9999;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1, 1);
+  image-rendering: optimizeSpeed;
+  /*                     */
+  image-rendering: -moz-crisp-edges;
+  /* Firefox             */
+  image-rendering: -o-crisp-edges;
+  /* Opera               */
+  image-rendering: -webkit-optimize-contrast;
+  /* Chrome (and Safari) */
+  image-rendering: optimize-contrast;
+  /* CSS3 Proposed       */
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE8+                */
+  -webkit-font-smoothing: antialiased;
 }
 .foundry_modal .close-modal {
   z-index: 4;
@@ -4822,8 +4834,8 @@ section + .portfolio-pullup {
 }
 @media all and (min-width: 1500px) {
   .foundry_modal {
-    max-width: 30%;
-    width: 30%;
+    max-width: 552px;
+    width: 552px;
   }
 }
 @media all and (max-width: 1500px) {
