--- a/public/css/front-custom.css
+++ b/public/css/front-custom.css
@@ -1376,4 +1376,13 @@ p.discount span.round{
     display: block;
     margin-bottom: 20px;
 }
+.pricing-table .btn-lg{
+    min-width: 0;
+}
+.credits-preview{
+    margin-top: 72px;
+}
+.voucher-summary table{
+    width: 100%;
+}
 /*# sourceMappingURL=front-custom.css.map */
