added phrases layout and some else

--- a/resources/assets/sass/admin/app.scss
+++ b/resources/assets/sass/admin/app.scss
@@ -154,3 +154,12 @@ tr.periods {
 .italic{
   font-style: italic;
 }
+
+.bigger-checkbox input{
+  margin-top: 0;
+  width: 20px;
+  height: 20px;
+}
+.phrase-add{
+  margin-top: 20px;
+}
