--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -9616,4 +9616,12 @@ tr.periods {
 .italic {
   font-style: italic; }
 
+.bigger-checkbox input {
+  margin-top: 0;
+  width: 20px;
+  height: 20px; }
+
+.phrase-add {
+  margin-top: 20px; }
+
 /*# sourceMappingURL=admin.css.map */
