--- a/resources/assets/css/frontend/custom.css
+++ b/resources/assets/css/frontend/custom.css
@@ -198,7 +198,12 @@ nav .nav-home, nav .nav-home .menu > li ul{
     background-color: rgba(0,0,0, 0.4);
 }
 
+nav .nav-open .menu > li ul{
+    background-color: transparent;
+    margin: 0 auto;
+}
 
+/*
 nav .nav-blog, nav .nav-blog .menu > li ul{
     background-color: #525252;
 }
@@ -210,12 +215,13 @@ nav .nav-profile, nav .nav-profile .menu > li ul{
 nav .nav-authorize-question, nav .nav-authorize-question .menu > li ul{
     background-color: rgba(34, 34, 34, 0.6);
 }
-
+*/
 nav.fixed.scrolled { display: none; }
 
 a.question-btn, input.question-btn{
     width: 100%;
     height: 40px;
+    min-width: initial !important;
     line-height: 38px;
     margin-bottom: 0;
 }
@@ -339,7 +345,11 @@ form .textarea-holder .charNum{
 
 .image-upload .drop-zone.empty::before,
 .image-upload .drop-article-zone.empty::before{
-    content: "\e64e";
+    content: " ";
+    background: url("../images/add-photo.svg") no-repeat;
+    background-size: 100% 100%;
+    width: 60px;
+    height: 60px;
 }
 
 .image-upload .drop-zone.empty img,
@@ -356,7 +366,7 @@ form .textarea-holder .charNum{
     line-height: 1;
     top: 50%;
     left: 50%;
-    margin: -40px 0 0 -40px;
+    margin: -30px 0 0 -30px;
     position: absolute;
 }
 
@@ -364,7 +374,7 @@ form .textarea-holder .charNum{
 .image-upload .drop-article-zone {
     position: relative;
     width: 50%;
-    padding-bottom: 50%;
+    padding-bottom: 100%;
     color: #aaa;
     text-align: center;
     border-radius: 3px;
@@ -410,8 +420,7 @@ form .textarea-holder .charNum{
 }
 
 .image-actions a.btn.image-button{
-    margin: 0 0 20px 0;
-    width: 90%;
+    margin: 10px 0 0;
     min-width: 50px;
 }
 
@@ -1352,35 +1361,6 @@ p.discount span.round{
 }
 .terms-conditions h4{
     margin-top: 60px;
-}
-
-#feedback-icon{
-    background: url("../images/feedback.svg") 0 0 no-repeat;
-    height: 100px;
-    width: 102px;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    z-index: 10;
-}
-#feedback-icon:after {
-    content: "";
-    opacity: 0;
-    display:block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: url("../images/feedback-hover.svg") 0 0 no-repeat;
-    -moz-transition: all .4s ease;
-    -webkit-transition: all .4s ease;
-    -ms-transition: all .4s ease;
-    -o-transition: all .4s ease;
-    transition: all .4s ease;
-}
-#feedback-icon:hover:after {
-    opacity: 1;
 }
 
 .feedback-thank-you{
