ikoneles ir fraze fix

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -2020,28 +2020,28 @@ div.simplicity {
 }
 
 div.social-icon.face {
-	background: url("../images/icons/FB-icon.svg") 0 0 no-repeat transparent;
+	background: url("../images/FB-icon.svg") 0 0 no-repeat transparent;
 }
 div.social-icon.face:after {
-	background: url("../images/icons/FB-icon-hover.svg") 0 0 no-repeat transparent;
+	background: url("../images/FB-icon-hover.svg") 0 0 no-repeat transparent;
 }
 div.social-icon.gplus {
-	background: url("../images/icons/G+-icon.svg") 0 0 no-repeat transparent;
+	background: url("../images/G+-icon.svg") 0 0 no-repeat transparent;
 }
 div.social-icon.gplus:after {
-	background: url("../images/icons/G+-icon-hover.svg") 0 0 no-repeat transparent;
+	background: url("../images/G+-icon-hover.svg") 0 0 no-repeat transparent;
 }
 div.social-icon.twit {
-	background: url("../images/icons/TWITTER-icon.svg") 0 0 no-repeat transparent;
+	background: url("../images/TWITTER-icon.svg") 0 0 no-repeat transparent;
 }
 div.social-icon.twit:after {
-	background: url("../images/icons/TWITTER-icon-hover.svg") 0 0 no-repeat transparent;
+	background: url("../images/TWITTER-icon-hover.svg") 0 0 no-repeat transparent;
 }
 div.social-icon.inst {
-	background: url("../images/icons/INSTAGRAM-icon.svg") 0 0 no-repeat transparent;
+	background: url("../images/INSTAGRAM-icon.svg") 0 0 no-repeat transparent;
 }
 div.social-icon.inst:after {
-	background: url("../images/icons/INSTAGRAM-icon-hover.svg") 0 0 no-repeat transparent;
+	background: url("../images/INSTAGRAM-icon-hover.svg") 0 0 no-repeat transparent;
 }
 
 ul.slides li.overlay:before {
