--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -1538,9 +1538,11 @@ section+.portfolio-pullup{ padding-top: 0; margin-top: -128px; position: relativ
 
 /*!---------- 32. COUNTDOWNS ----------*/
 
-.countdown{ font-size: 80px; line-height: 88px; .h1; font-weight: 100; text-transform: uppercase; }
+.countdown{font-size: 80px; line-height: 88px; .h1; font-weight: 100; text-transform: uppercase; font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;}
 .image-bg .countdown{ color: #fff; }
-
+.launch p{ font-size: 15px;}
+.launch .alert-danger{ background-color: #c64444; margin-top: 10px;}
+.launch .alert-success{ background-color: #47b475; color: #FFF; margin-top: 10px;}
 @media all and (max-width: 990px){
 	.countdown{ font-size: 64px; line-height: 72px; }
 }
