trying solution #1 for jomping back problem

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -1935,6 +1935,10 @@ footer.bg-dark a{ color: #fff; }
 WHERE MAGIC HAPPENS
 **********************/
 
+.background-image-holder{
+	height: 100vh;
+}
+
 #feedback-icon{
 	background: url("../images/feedback.svg") 0 0 no-repeat;
 	height: 100px;
