--- a/public/css/tinymce.css
+++ b/public/css/tinymce.css
@@ -1,5 +1,1 @@
-body{
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 13px;
-}
-/*# sourceMappingURL=tinymce.css.map */
+body{font-family:Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;font-size:13px}
