added consultant select algorythm, timetables and use summary page

--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -461,7 +461,7 @@ nav .widget hr:first-of-type{ display: none; }
 nav .cart-overview{ min-width: 150px; margin-bottom: 16px; }
 nav .cart-overview a{ height: auto; }
 
-.language .menu > li ul{ max-width: 150px; right: -24px; /*border-bottom: 1px solid #fe4902;*/ }
+.language .menu > li ul{ max-width: 180px; right: -24px; /*border-bottom: 1px solid #fe4902;*/ }
 
 .nav-open{ max-height: 10000px !important; height: auto !important; }
 .nav-open .mobile-toggle{ border-bottom: 1px solid #ccc; }
@@ -2653,8 +2653,15 @@ MOBILE
 	}
 }
 
-
-
+.summary-profile .header{
+	font-size: 16px;
+}
+.alert-warning a:hover{
+	color: #b77115;
+}
+.alert-warning a{
+	color: #D88519;
+}
 
 
 
