--- a/public/css/tinymce.css
+++ b/public/css/tinymce.css
@@ -1,1 +1,5 @@
-body{font-family:Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;font-size:13px}
+body{
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 13px;
+}
+/*# sourceMappingURL=tinymce.css.map */
