--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -302,6 +302,7 @@ ul.lead li{ font-size: 16px; line-height: 40px; }
 
 @color-primary: @green;
 @bg-secondary: #f8f8f8;
+@bg-grayblue: #2B2C2F;
 @bg-dark: #292929;
 .bg-primary{ background: @color-primary !important; }
 .bg-secondary{ background: @bg-secondary; }
